tests/negative/NestedPatternBraces.juvix
module NestedPatternBraces;

a : {A : Type} → Type
| {{A}} := a;

end;
